--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!-- Ambient Gallery Lights -->
+<div class="ambient" aria-hidden="true">
+  <span class="glow glow--a"></span>
+  <span class="glow glow--b"></span>
 
+  <span class="bulb bulb--a"></span>
+  <span class="bulb bulb--b"></span>
+  <span class="bulb bulb--c"></span>
+</div>
+
+<!-- Spotlight Transition -->
+<div class="wipe" aria-hidden="true">
+  <div class="wipe__bg"></div>
+  <div class="wipe__spot"></div>
+  <div class="wipe__label">Loading</div>
+</div>
