--- a/index.html
+++ b/index.html
@@ -31,31 +31,16 @@
       overflow-x:hidden;
     }
 
-    /* Subtle “glasshouse” grid */
-    .bg-grid{
-      position: fixed; inset:0; pointer-events:none; z-index:0;
-      background:
-        linear-gradient(to right, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px,
-        linear-gradient(to bottom, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px;
-      mask-image: radial-gradient(600px 600px at 50% 0%, rgba(0,0,0,.9), transparent 70%);
-      opacity:.35;
-    }
+/* subtle “glass caustics” shimmer (very light) */
+.rays{
+  opacity: .40;
+  filter: blur(1px);
+}
 
-    /* Light rays */
-    .rays{
-      position: fixed; inset:-20vh -10vw; pointer-events:none; z-index:0;
-      background:
-        radial-gradient(1200px 520px at 50% 0%, rgba(255,255,255,.95), transparent 70%),
-        conic-gradient(from 210deg at 50% 10%,
-          rgba(255,255,255,.30),
-          rgba(255,255,255,0) 20%,
-          rgba(255,255,255,.18) 35%,
-          rgba(255,255,255,0) 60%,
-          rgba(255,255,255,.12) 80%,
-          rgba(255,255,255,0));
-      filter: blur(2px);
-      opacity:.55;
-    }
+/* make grid even more faint so glass reads better */
+.bg-grid{
+  opacity: .22;
+} 
 
     /* Particles (very subtle, like dust in light) */
     .particles{
