--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Sarah Meister — UI/UX & 3D</title>
 
   <!-- GitHub Pages Project Site fix: eymeistern.github.io/portfolio/ -->
@@ -12,22 +12,38 @@
     :root{
       --bg0:#f6f8fb;
       --bg1:#eef3f8;
+
       --ink:#0b1320;
       --ink2:rgba(11,19,32,.72);
+
       --stroke:rgba(11,19,32,.08);
-      --stroke2:rgba(255,255,255,.45);
+      --stroke2:rgba(255,255,255,.55);
+
       --glass:rgba(255,255,255,.58);
       --glass2:rgba(255,255,255,.42);
+
       --shadow: 0 18px 60px rgba(10, 18, 35, .10);
       --shadow2: 0 10px 30px rgba(10, 18, 35, .08);
+
       --r: 22px;
-      --padx: clamp(16px, 4vw, 56px);
+      --padx: clamp(14px, 4vw, 56px);
       --navh: 72px;
       --max: 1120px;
     }
 
-    *{ box-sizing: border-box; }
-    html{ scroll-behavior: smooth; scroll-padding-top: calc(var(--navh) + 16px); }
+    /* ===== Responsive safety net (prevents "width fucked up") ===== */
+    html, body{
+      width:100%;
+      max-width:100%;
+      overflow-x:hidden;
+    }
+    * , *::before, *::after{ box-sizing:border-box; }
+
+    html{
+      scroll-behavior:smooth;
+      scroll-padding-top: calc(var(--navh) + 16px);
+    }
+
     body{
       margin:0;
       color: var(--ink);
@@ -36,12 +52,14 @@
         radial-gradient(1200px 900px at 20% 0%, rgba(255,255,255,.95), transparent 62%),
         radial-gradient(900px 700px at 85% 15%, rgba(255,255,255,.85), transparent 60%),
         linear-gradient(180deg, var(--bg0) 0%, var(--bg1) 100%);
-      overflow-x:hidden;
     }
 
-    /* Subtle “glasshouse” grid */
+    /* Background layers */
     .bg-grid{
-      position: fixed; inset:0; pointer-events:none; z-index:0;
+      position: fixed;
+      inset:0;
+      pointer-events:none;
+      z-index:0;
       background:
         linear-gradient(to right, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px,
         linear-gradient(to bottom, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px;
@@ -49,9 +67,11 @@
       opacity:.35;
     }
 
-    /* Light rays */
     .rays{
-      position: fixed; inset:-20vh -10vw; pointer-events:none; z-index:0;
+      position: fixed;
+      inset:-12vh -6vw; /* safer than -20vh -10vw to avoid rare overflow */
+      pointer-events:none;
+      z-index:0;
       background:
         radial-gradient(1200px 520px at 50% 0%, rgba(255,255,255,.95), transparent 70%),
         conic-gradient(from 210deg at 50% 10%,
@@ -65,9 +85,11 @@
       opacity:.55;
     }
 
-    /* Particles (very subtle, like dust in light) */
     .particles{
-      position: fixed; inset:0; pointer-events:none; z-index:0;
+      position: fixed;
+      inset:0;
+      pointer-events:none;
+      z-index:0;
       background-image:
         radial-gradient(circle, rgba(255,255,255,.70) 1px, transparent 2px),
         radial-gradient(circle, rgba(255,255,255,.55) 1px, transparent 2px),
@@ -76,6 +98,7 @@
       background-position: 20px 40px, 120px 160px, 240px 60px;
       opacity:.18;
       animation: drift 18s ease-in-out infinite;
+      transform: translateZ(0);
     }
     @keyframes drift{
       0%,100%{ transform: translate3d(0,0,0); }
@@ -93,7 +116,10 @@
     .nav-wrap{ position: sticky; top:0; z-index:50; }
     .nav{
       height: var(--navh);
-      display:flex; align-items:center; justify-content:space-between; gap:16px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
       padding: 0 var(--padx);
       background: rgba(246,248,251,0);
       border-bottom: 1px solid rgba(11,19,32,0);
@@ -107,11 +133,14 @@
       -webkit-backdrop-filter: blur(12px);
     }
     .brand{
-      display:flex; align-items:baseline; gap:10px;
+      display:flex;
+      align-items:baseline;
+      gap:10px;
       font-weight: 700;
       letter-spacing: .02em;
       text-decoration:none;
       color: var(--ink);
+      white-space:nowrap;
     }
     .brand small{
       font-weight: 650;
@@ -119,8 +148,14 @@
       text-transform: uppercase;
       color: rgba(11,19,32,.52);
       font-size: 11px;
+      white-space:nowrap;
     }
-    .nav-links{ display:flex; align-items:center; gap:10px; }
+
+    .nav-links{
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
     .nav-links a{
       text-decoration:none;
       color: rgba(11,19,32,.70);
@@ -128,6 +163,7 @@
       padding: 10px 12px;
       border-radius: 999px;
       transition: background .18s ease, color .18s ease;
+      white-space:nowrap;
     }
     .nav-links a:hover{ color: var(--ink); background: rgba(255,255,255,.55); }
     .cta{
@@ -137,22 +173,39 @@
     }
     .cta:hover{ background: rgba(11,19,32,1); }
 
-    /* Mobile */
+    /* Mobile nav */
     .toggle{
       display:none;
-      width:44px; height:44px;
+      width:44px;
+      height:44px;
       border-radius:999px;
       border: 1px solid rgba(11,19,32,.10);
       background: rgba(255,255,255,.55);
       cursor:pointer;
+      flex: 0 0 auto;
     }
-    .toggle span{ display:block; width:18px; height:2px; margin:4px auto; background: rgba(11,19,32,.65); border-radius:2px; }
+    .toggle span{
+      display:block;
+      width:18px;
+      height:2px;
+      margin:4px auto;
+      background: rgba(11,19,32,.65);
+      border-radius:2px;
+    }
+
     @media (max-width: 860px){
+      :root{ --navh: 64px; }
       .toggle{ display:block; }
+
+      .brand small{ display:none; } /* frees space on small screens */
+
       .nav-links{
-        position:absolute; left:0; right:0; top: var(--navh);
+        position:absolute;
+        left:0;
+        right:0;
+        top: var(--navh);
         padding: 12px var(--padx) 18px;
-        background: rgba(246,248,251,.82);
+        background: rgba(246,248,251,.86);
         border-bottom: 1px solid rgba(11,19,32,.08);
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
@@ -167,13 +220,17 @@
         pointer-events:none;
         transition: opacity .2s ease, transform .2s ease;
       }
-      .nav-links.is-open{ opacity:1; transform: translateY(0); pointer-events:auto; }
+      .nav-links.is-open{
+        opacity:1;
+        transform: translateY(0);
+        pointer-events:auto;
+      }
       .nav-links a{ width:100%; }
     }
 
     /* Hero */
     .hero{
-      padding: clamp(56px, 9vh, 96px) 0 26px;
+      padding: clamp(44px, 9vh, 96px) 0 26px;
     }
     .kicker{
       display:inline-block;
@@ -189,7 +246,9 @@
       font-weight: 600;
       letter-spacing: -0.02em;
       line-height: 1.02;
-      font-size: clamp(40px, 5.6vw, 72px);
+      font-size: clamp(34px, 5.6vw, 72px);
+      word-break: normal;
+      hyphens: auto;
     }
     .sub{
       max-width: 70ch;
@@ -198,9 +257,18 @@
       line-height: 1.65;
       margin: 0 0 22px;
     }
-    .hero-actions{ display:flex; gap:12px; flex-wrap:wrap; }
+    .hero-actions{
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+
+    /* Buttons */
     .btn{
-      display:inline-flex; align-items:center; justify-content:center;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
       gap:10px;
       padding: 12px 16px;
       border-radius: 999px;
@@ -220,19 +288,42 @@
     }
     .btn-primary:hover{ background: rgba(11,19,32,1); }
 
+    @media (max-width: 520px){
+      .hero-actions{
+        flex-direction: column;
+        align-items: stretch;
+      }
+      .btn{ width: 100%; }
+      .kicker{ margin-bottom: 10px; }
+      .sub{ font-size: 16px; }
+    }
+
     /* Glass panels */
     .panel{
+      position: relative;
+      overflow: hidden;
       background: linear-gradient(180deg, var(--glass), var(--glass2));
       border: 1px solid var(--stroke);
-      border-top-color: rgba(255,255,255,.65);
-      border-left-color: rgba(255,255,255,.55);
+      border-top-color: rgba(255,255,255,.70);
+      border-left-color: rgba(255,255,255,.60);
+      border-right-color: rgba(255,255,255,.35);
       border-radius: var(--r);
       box-shadow: var(--shadow);
       backdrop-filter: blur(14px);
       -webkit-backdrop-filter: blur(14px);
     }
+    /* subtle glass highlight */
+    .panel::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius: inherit;
+      background: radial-gradient(520px 240px at 18% 0%, rgba(255,255,255,.55), transparent 60%);
+      opacity:.35;
+      pointer-events:none;
+    }
 
-    /* Competencies */
+    /* Sections */
     .section{ padding: 22px 0 0; }
     .section-title{
       text-align:center;
@@ -244,9 +335,11 @@
       color: rgba(11,19,32,.55);
       margin: 28px 0 14px;
     }
+
+    /* Competencies */
     .grid-2{
       display:grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 14px;
       margin-top: 14px;
     }
@@ -255,8 +348,6 @@
     }
     .competency{
       padding: 18px 18px 16px;
-      position: relative;
-      overflow: hidden;
     }
     .competency h3{
       margin: 0 0 8px;
@@ -265,7 +356,8 @@
       letter-spacing:.01em;
     }
     .competency ul{
-      margin: 0; padding-left: 18px;
+      margin: 0;
+      padding-left: 18px;
       color: rgba(11,19,32,.70);
       line-height: 1.7;
       font-size: 14px;
@@ -274,30 +366,35 @@
     /* Selected works */
     .works{
       display:grid;
-      grid-template-columns: repeat(12, 1fr);
+      grid-template-columns: repeat(12, minmax(0, 1fr));
       gap: 14px;
       margin: 14px 0 40px;
     }
-    @media (max-width: 980px){
-      .works{ grid-template-columns: repeat(6, 1fr); }
-    }
-    @media (max-width: 640px){
-      .works{ grid-template-columns: repeat(1, 1fr); }
-    }
-
     .card{
       grid-column: span 4;
       overflow:hidden;
       position: relative;
-      transition: transform .22s ease, border-color .22s ease;
+      transition: transform .22s ease, border-color .22s ease, box-shadow .22s ease;
       cursor: pointer;
       text-decoration:none;
       color: inherit;
+      min-width: 0;
     }
-    @media (max-width: 980px){ .card{ grid-column: span 6; } }
-    @media (max-width: 640px){ .card{ grid-column: span 1; } }
+    .card:hover{
+      transform: translateY(-4px);
+      border-color: rgba(11,19,32,.12);
+      box-shadow: 0 22px 70px rgba(10,18,35,.12);
+    }
 
-    .card:hover{ transform: translateY(-4px); border-color: rgba(11,19,32,.12); }
+    /* Breakpoints: tablet & mobile */
+    @media (max-width: 980px){
+      .works{ grid-template-columns: repeat(6, minmax(0,1fr)); }
+      .card{ grid-column: span 6; }
+    }
+    @media (max-width: 640px){
+      .works{ grid-template-columns: 1fr; }
+      .card{ grid-column: 1 / -1; }
+    }
 
     .media{
       height: 170px;
@@ -306,38 +403,45 @@
         radial-gradient(900px 320px at 30% 0%, rgba(255,255,255,.85), transparent 60%),
         linear-gradient(180deg, rgba(255,255,255,.35), rgba(255,255,255,0));
       position: relative;
+      overflow:hidden;
     }
 
-    /* glass “highlight sweep” on hover */
+    /* safer sheen sweep (no huge inset that can cause overflow) */
     .media::after{
       content:"";
-      position:absolute; inset:-40% -60%;
-      background: linear-gradient(120deg, transparent, rgba(255,255,255,.65), transparent);
-      transform: translateX(-35%) rotate(8deg);
+      position:absolute;
+      inset:-20% -20%;
+      background: linear-gradient(120deg, transparent, rgba(255,255,255,.70), transparent);
+      transform: translateX(-40%) rotate(8deg);
       opacity:0;
-      transition: opacity .18s ease, transform .55s ease;
+      transition: opacity .18s ease, transform .60s cubic-bezier(.2,.9,.2,1);
+      will-change: transform;
     }
     .card:hover .media::after{
-      opacity:.55;
-      transform: translateX(35%) rotate(8deg);
+      opacity:.60;
+      transform: translateX(40%) rotate(8deg);
     }
 
-    .body{
-      padding: 16px 16px 14px;
-    }
+    .body{ padding: 16px 16px 14px; }
     .row{
-      display:flex; align-items:baseline; justify-content:space-between; gap: 10px;
+      display:flex;
+      align-items:baseline;
+      justify-content:space-between;
+      gap: 10px;
+      min-width: 0;
     }
     .title{
       margin:0;
       font-weight: 750;
       font-size: 15px;
       letter-spacing:.01em;
+      min-width: 0;
     }
     .year{
       color: rgba(11,19,32,.55);
       font-size: 13px;
       font-weight: 650;
+      flex: 0 0 auto;
     }
     .desc{
       margin: 8px 0 0;
@@ -346,7 +450,9 @@
       line-height: 1.55;
     }
     .tags{
-      display:flex; gap:8px; flex-wrap:wrap;
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
       margin-top: 12px;
     }
     .tag{
@@ -358,6 +464,12 @@
       border-radius: 999px;
     }
 
+    /* Contact panel spacing on small screens */
+    @media (max-width: 520px){
+      .body{ padding: 14px 14px 12px; }
+      .competency{ padding: 16px 16px 14px; }
+    }
+
     /* Footer */
     footer{
       padding: 26px 0 40px;
@@ -367,7 +479,9 @@
 
     /* Light-wipe page transition overlay */
     .wipe{
-      position: fixed; inset:0; z-index: 1000;
+      position: fixed;
+      inset:0;
+      z-index: 1000;
       pointer-events:none;
       opacity: 0;
       transition: opacity .35s ease;
@@ -375,7 +489,8 @@
     .wipe.is-active{ opacity: 1; }
 
     .wipe__bg{
-      position:absolute; inset:0;
+      position:absolute;
+      inset:0;
       background: rgba(246,248,251,.92);
       backdrop-filter: blur(14px);
       -webkit-backdrop-filter: blur(14px);
@@ -383,7 +498,8 @@
 
     .wipe__beam{
       position:absolute;
-      top:-10vh; bottom:-10vh;
+      top:-10vh;
+      bottom:-10vh;
       left:-30%;
       width: 40%;
       background: linear-gradient(90deg, transparent, rgba(255,255,255,.95), transparent);
@@ -391,6 +507,7 @@
       transform: skewX(-12deg);
       opacity: .0;
       transition: left .55s cubic-bezier(.2,.9,.2,1), opacity .55s cubic-bezier(.2,.9,.2,1);
+      will-change: left;
     }
     .wipe.is-active .wipe__beam{
       left: 120%;
@@ -400,12 +517,19 @@
     .wipe__label{
       position:absolute;
       left: var(--padx);
-      bottom: 46px;
+      bottom: max(20px, env(safe-area-inset-bottom));
       font-weight: 750;
       letter-spacing: .18em;
       text-transform: uppercase;
       font-size: 12px;
       color: rgba(11,19,32,.58);
+    }
+
+    /* Reduce motion for accessibility */
+    @media (prefers-reduced-motion: reduce){
+      html{ scroll-behavior: auto; }
+      .particles{ animation: none; }
+      .btn, .card, .media::after, .wipe, .wipe__beam{ transition: none !important; }
     }
   </style>
 </head>
@@ -558,6 +682,7 @@
     // Sticky nav solid on scroll
     const nav = document.getElementById("siteNav");
     const setNavState = () => {
+      if (!nav) return;
       if (window.scrollY > 20) nav.classList.add("is-solid");
       else nav.classList.remove("is-solid");
     };
@@ -584,8 +709,12 @@
     const wipeLabel = document.querySelector(".wipe__label");
 
     function isExternalLink(a){
-      const url = new URL(a.href, window.location.href);
-      return url.origin !== window.location.origin;
+      try{
+        const url = new URL(a.href, window.location.href);
+        return url.origin !== window.location.origin;
+      }catch{
+        return true;
+      }
     }
     function isHashNav(a){
       const href = a.getAttribute("href") || "";
