--- a/index.html
+++ b/index.html
@@ -16,28 +16,32 @@
       --ink:#0b1320;
       --ink2:rgba(11,19,32,.72);
 
-      --stroke:rgba(11,19,32,.08);
-      --stroke2:rgba(255,255,255,.55);
+      /* crystal clear jelly */
+      --glass: rgba(255,255,255,.26);
+      --glass2: rgba(255,255,255,.12);
+      --stroke: rgba(255,255,255,.55);
+      --strokeDark: rgba(11,19,32,.10);
 
-      --glass:rgba(255,255,255,.58);
-      --glass2:rgba(255,255,255,.42);
+      --shadow: 0 26px 90px rgba(10, 18, 35, .10);
+      --shadow2: 0 12px 34px rgba(10, 18, 35, .08);
 
-      --shadow: 0 18px 60px rgba(10, 18, 35, .10);
-      --shadow2: 0 10px 30px rgba(10, 18, 35, .08);
-
-      --r: 22px;
+      --r: 24px;
       --padx: clamp(14px, 4vw, 56px);
       --navh: 72px;
       --max: 1120px;
+
+      /* very subtle crystal caustics */
+      --glowW: rgba(255,255,255,.55);
+      --glowC: rgba(185, 220, 255, .20);
     }
 
-    /* ===== Responsive safety net (prevents "width fucked up") ===== */
+    /* ===== Responsive safety net ===== */
     html, body{
       width:100%;
       max-width:100%;
       overflow-x:hidden;
     }
-    * , *::before, *::after{ box-sizing:border-box; }
+    *, *::before, *::after{ box-sizing:border-box; }
 
     html{
       scroll-behavior:smooth;
@@ -63,23 +67,23 @@
       background:
         linear-gradient(to right, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px,
         linear-gradient(to bottom, rgba(11,19,32,.05) 1px, transparent 1px) 0 0/64px 64px;
-      mask-image: radial-gradient(600px 600px at 50% 0%, rgba(0,0,0,.9), transparent 70%);
-      opacity:.35;
+      mask-image: radial-gradient(650px 650px at 50% 0%, rgba(0,0,0,.9), transparent 72%);
+      opacity:.28;
     }
 
     .rays{
       position: fixed;
-      inset:-12vh -6vw; /* safer than -20vh -10vw to avoid rare overflow */
+      inset:-10vh -6vw;
       pointer-events:none;
       z-index:0;
       background:
         radial-gradient(1200px 520px at 50% 0%, rgba(255,255,255,.95), transparent 70%),
         conic-gradient(from 210deg at 50% 10%,
-          rgba(255,255,255,.30),
+          rgba(255,255,255,.26),
           rgba(255,255,255,0) 20%,
-          rgba(255,255,255,.18) 35%,
+          rgba(255,255,255,.16) 35%,
           rgba(255,255,255,0) 60%,
-          rgba(255,255,255,.12) 80%,
+          rgba(255,255,255,.10) 80%,
           rgba(255,255,255,0));
       filter: blur(2px);
       opacity:.55;
@@ -96,7 +100,7 @@
         radial-gradient(circle, rgba(255,255,255,.45) 1px, transparent 2px);
       background-size: 240px 240px, 320px 320px, 420px 420px;
       background-position: 20px 40px, 120px 160px, 240px 60px;
-      opacity:.18;
+      opacity:.16;
       animation: drift 18s ease-in-out infinite;
       transform: translateZ(0);
     }
@@ -110,6 +114,58 @@
     .container{
       width: min(var(--max), calc(100% - (var(--padx) * 2)));
       margin: 0 auto;
+    }
+
+    /* ===== Crystal Jelly core ===== */
+    .jelly{
+      position: relative;
+      overflow: hidden;
+
+      background:
+        radial-gradient(900px 280px at 20% 0%, rgba(255,255,255,.45), transparent 60%),
+        linear-gradient(180deg, var(--glass), var(--glass2));
+      border: 1px solid var(--stroke);
+      border-right-color: rgba(255,255,255,.30);
+      border-bottom-color: var(--strokeDark);
+
+      border-radius: var(--r);
+
+      box-shadow:
+        0 26px 90px rgba(10,18,35,.10),
+        0 14px 40px rgba(10,18,35,.06),
+        inset 0 1px 0 rgba(255,255,255,.75),
+        inset 0 -14px 26px rgba(11,19,32,.06);
+
+      backdrop-filter: blur(26px) saturate(1.35);
+      -webkit-backdrop-filter: blur(26px) saturate(1.35);
+
+      transform: translateZ(0);
+    }
+
+    /* glossy specular film */
+    .jelly::before{
+      content:"";
+      position:absolute;
+      inset:-35%;
+      background: linear-gradient(120deg,
+        transparent 30%,
+        rgba(255,255,255,.75) 46%,
+        transparent 62%);
+      transform: translateX(-22%) rotate(10deg);
+      opacity: .16;
+      pointer-events:none;
+    }
+
+    /* thin inner ring */
+    .jelly::after{
+      content:"";
+      position:absolute;
+      inset: 1px;
+      border-radius: calc(var(--r) - 1px);
+      pointer-events:none;
+      box-shadow:
+        inset 0 0 0 1px rgba(255,255,255,.18);
+      opacity:.95;
     }
 
     /* NAV */
@@ -126,12 +182,13 @@
       transition: background .25s ease, border-color .25s ease, box-shadow .25s ease, backdrop-filter .25s ease;
     }
     .nav.is-solid{
-      background: rgba(246,248,251,.72);
+      background: rgba(246,248,251,.48);
       border-bottom-color: rgba(11,19,32,.08);
       box-shadow: var(--shadow2);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      backdrop-filter: blur(18px) saturate(1.3);
+      -webkit-backdrop-filter: blur(18px) saturate(1.3);
     }
+
     .brand{
       display:flex;
       align-items:baseline;
@@ -162,14 +219,19 @@
       font-size: 14px;
       padding: 10px 12px;
       border-radius: 999px;
-      transition: background .18s ease, color .18s ease;
+      transition: background .18s ease, color .18s ease, transform .18s ease;
       white-space:nowrap;
     }
-    .nav-links a:hover{ color: var(--ink); background: rgba(255,255,255,.55); }
+    .nav-links a:hover{
+      color: var(--ink);
+      background: rgba(255,255,255,.40);
+      transform: translateY(-1px);
+    }
+
     .cta{
       background: rgba(11,19,32,.92);
       color: rgba(255,255,255,.92) !important;
-      box-shadow: 0 10px 24px rgba(11,19,32,.12);
+      box-shadow: 0 14px 34px rgba(11,19,32,.14);
     }
     .cta:hover{ background: rgba(11,19,32,1); }
 
@@ -179,10 +241,16 @@
       width:44px;
       height:44px;
       border-radius:999px;
-      border: 1px solid rgba(11,19,32,.10);
-      background: rgba(255,255,255,.55);
+      border: 1px solid rgba(255,255,255,.55);
+      background: rgba(255,255,255,.28);
       cursor:pointer;
       flex: 0 0 auto;
+      backdrop-filter: blur(18px) saturate(1.35);
+      -webkit-backdrop-filter: blur(18px) saturate(1.35);
+      box-shadow:
+        0 14px 34px rgba(10,18,35,.08),
+        inset 0 1px 0 rgba(255,255,255,.75),
+        inset 0 -10px 18px rgba(11,19,32,.05);
     }
     .toggle span{
       display:block;
@@ -196,8 +264,7 @@
     @media (max-width: 860px){
       :root{ --navh: 64px; }
       .toggle{ display:block; }
-
-      .brand small{ display:none; } /* frees space on small screens */
+      .brand small{ display:none; }
 
       .nav-links{
         position:absolute;
@@ -205,10 +272,10 @@
         right:0;
         top: var(--navh);
         padding: 12px var(--padx) 18px;
-        background: rgba(246,248,251,.86);
+        background: rgba(246,248,251,.60);
         border-bottom: 1px solid rgba(11,19,32,.08);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
+        backdrop-filter: blur(18px) saturate(1.3);
+        -webkit-backdrop-filter: blur(18px) saturate(1.3);
         box-shadow: var(--shadow2);
 
         flex-direction: column;
@@ -247,8 +314,7 @@
       letter-spacing: -0.02em;
       line-height: 1.02;
       font-size: clamp(34px, 5.6vw, 72px);
-      word-break: normal;
-      hyphens: auto;
+      hyphens:auto;
     }
     .sub{
       max-width: 70ch;
@@ -264,7 +330,7 @@
       align-items:center;
     }
 
-    /* Buttons */
+    /* Buttons (crystal jelly) */
     .btn{
       display:inline-flex;
       align-items:center;
@@ -272,55 +338,46 @@
       gap:10px;
       padding: 12px 16px;
       border-radius: 999px;
-      border: 1px solid rgba(11,19,32,.10);
-      background: rgba(255,255,255,.55);
-      color: rgba(11,19,32,.80);
       text-decoration:none;
       font-weight: 650;
-      box-shadow: var(--shadow2);
+
+      background: rgba(255,255,255,.22);
+      border: 1px solid rgba(255,255,255,.60);
+      border-bottom-color: rgba(11,19,32,.12);
+
+      box-shadow:
+        0 16px 38px rgba(10,18,35,.08),
+        inset 0 1px 0 rgba(255,255,255,.75),
+        inset 0 -12px 22px rgba(11,19,32,.06);
+
+      color: rgba(11,19,32,.85);
+
+      backdrop-filter: blur(22px) saturate(1.35);
+      -webkit-backdrop-filter: blur(22px) saturate(1.35);
+
       transition: transform .18s ease, background .18s ease, border-color .18s ease;
     }
-    .btn:hover{ transform: translateY(-2px); background: rgba(255,255,255,.70); border-color: rgba(11,19,32,.14); }
+    .btn:hover{
+      transform: translateY(-2px);
+      background: rgba(255,255,255,.28);
+      border-color: rgba(255,255,255,.70);
+    }
+
     .btn-primary{
       background: rgba(11,19,32,.92);
       color: rgba(255,255,255,.92);
       border-color: rgba(11,19,32,.18);
+      box-shadow: 0 18px 42px rgba(11,19,32,.14);
+      backdrop-filter: none;
+      -webkit-backdrop-filter: none;
     }
     .btn-primary:hover{ background: rgba(11,19,32,1); }
 
     @media (max-width: 520px){
-      .hero-actions{
-        flex-direction: column;
-        align-items: stretch;
-      }
+      .hero-actions{ flex-direction: column; align-items: stretch; }
       .btn{ width: 100%; }
       .kicker{ margin-bottom: 10px; }
       .sub{ font-size: 16px; }
-    }
-
-    /* Glass panels */
-    .panel{
-      position: relative;
-      overflow: hidden;
-      background: linear-gradient(180deg, var(--glass), var(--glass2));
-      border: 1px solid var(--stroke);
-      border-top-color: rgba(255,255,255,.70);
-      border-left-color: rgba(255,255,255,.60);
-      border-right-color: rgba(255,255,255,.35);
-      border-radius: var(--r);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(14px);
-      -webkit-backdrop-filter: blur(14px);
-    }
-    /* subtle glass highlight */
-    .panel::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      border-radius: inherit;
-      background: radial-gradient(520px 240px at 18% 0%, rgba(255,255,255,.55), transparent 60%);
-      opacity:.35;
-      pointer-events:none;
     }
 
     /* Sections */
@@ -346,9 +403,7 @@
     @media (max-width: 860px){
       .grid-2{ grid-template-columns: 1fr; }
     }
-    .competency{
-      padding: 18px 18px 16px;
-    }
+    .competency{ padding: 18px 18px 16px; }
     .competency h3{
       margin: 0 0 8px;
       font-size: 16px;
@@ -370,23 +425,39 @@
       gap: 14px;
       margin: 14px 0 40px;
     }
+
     .card{
       grid-column: span 4;
-      overflow:hidden;
       position: relative;
-      transition: transform .22s ease, border-color .22s ease, box-shadow .22s ease;
-      cursor: pointer;
+      overflow:hidden;
       text-decoration:none;
       color: inherit;
       min-width: 0;
-    }
-    .card:hover{
-      transform: translateY(-4px);
-      border-color: rgba(11,19,32,.12);
-      box-shadow: 0 22px 70px rgba(10,18,35,.12);
+      transition: transform .22s ease, box-shadow .22s ease;
     }
 
-    /* Breakpoints: tablet & mobile */
+    /* crystal halo behind each card (very subtle) */
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:-18px;
+      border-radius: calc(var(--r) + 18px);
+      background:
+        radial-gradient(260px 160px at 30% 18%, var(--glowW), transparent 70%),
+        radial-gradient(260px 180px at 70% 35%, var(--glowC), transparent 75%);
+      filter: blur(18px);
+      opacity: .40;
+      z-index: -1;
+      pointer-events:none;
+      transition: opacity .25s ease;
+    }
+    .card:hover::before{ opacity:.58; }
+
+    .card:hover{
+      transform: translateY(-5px);
+      box-shadow: 0 28px 110px rgba(10,18,35,.12);
+    }
+
     @media (max-width: 980px){
       .works{ grid-template-columns: repeat(6, minmax(0,1fr)); }
       .card{ grid-column: span 6; }
@@ -401,25 +472,25 @@
       border-bottom: 1px solid rgba(11,19,32,.06);
       background:
         radial-gradient(900px 320px at 30% 0%, rgba(255,255,255,.85), transparent 60%),
-        linear-gradient(180deg, rgba(255,255,255,.35), rgba(255,255,255,0));
+        linear-gradient(180deg, rgba(255,255,255,.28), rgba(255,255,255,0));
       position: relative;
       overflow:hidden;
     }
 
-    /* safer sheen sweep (no huge inset that can cause overflow) */
+    /* specular sweep on hover */
     .media::after{
       content:"";
       position:absolute;
-      inset:-20% -20%;
-      background: linear-gradient(120deg, transparent, rgba(255,255,255,.70), transparent);
-      transform: translateX(-40%) rotate(8deg);
+      inset:-22% -22%;
+      background: linear-gradient(120deg, transparent, rgba(255,255,255,.80), transparent);
+      transform: translateX(-44%) rotate(10deg);
       opacity:0;
       transition: opacity .18s ease, transform .60s cubic-bezier(.2,.9,.2,1);
       will-change: transform;
     }
     .card:hover .media::after{
-      opacity:.60;
-      transform: translateX(40%) rotate(8deg);
+      opacity:.52;
+      transform: translateX(44%) rotate(10deg);
     }
 
     .body{ padding: 16px 16px 14px; }
@@ -455,16 +526,26 @@
       flex-wrap:wrap;
       margin-top: 12px;
     }
+
     .tag{
       font-size: 12px;
-      color: rgba(11,19,32,.65);
-      border: 1px solid rgba(11,19,32,.08);
-      background: rgba(255,255,255,.52);
       padding: 6px 10px;
       border-radius: 999px;
+
+      background: rgba(255,255,255,.18);
+      border: 1px solid rgba(255,255,255,.62);
+      border-bottom-color: rgba(11,19,32,.12);
+      color: rgba(11,19,32,.70);
+
+      box-shadow:
+        0 12px 26px rgba(10,18,35,.06),
+        inset 0 1px 0 rgba(255,255,255,.75),
+        inset 0 -10px 18px rgba(11,19,32,.06);
+
+      backdrop-filter: blur(18px) saturate(1.25);
+      -webkit-backdrop-filter: blur(18px) saturate(1.25);
     }
 
-    /* Contact panel spacing on small screens */
     @media (max-width: 520px){
       .body{ padding: 14px 14px 12px; }
       .competency{ padding: 16px 16px 14px; }
@@ -491,9 +572,9 @@
     .wipe__bg{
       position:absolute;
       inset:0;
-      background: rgba(246,248,251,.92);
-      backdrop-filter: blur(14px);
-      -webkit-backdrop-filter: blur(14px);
+      background: rgba(246,248,251,.62);
+      backdrop-filter: blur(26px) saturate(1.25);
+      -webkit-backdrop-filter: blur(26px) saturate(1.25);
     }
 
     .wipe__beam{
@@ -525,11 +606,11 @@
       color: rgba(11,19,32,.58);
     }
 
-    /* Reduce motion for accessibility */
+    /* Reduce motion */
     @media (prefers-reduced-motion: reduce){
       html{ scroll-behavior: auto; }
       .particles{ animation: none; }
-      .btn, .card, .media::after, .wipe, .wipe__beam{ transition: none !important; }
+      .btn, .card, .media::after, .wipe, .wipe__beam, .nav-links a{ transition: none !important; }
     }
   </style>
 </head>
@@ -583,7 +664,7 @@
       <section class="section" aria-label="Kompetenzen">
         <div class="section-title">Meine Kompetenzen</div>
         <div class="grid-2">
-          <div class="panel competency">
+          <div class="jelly competency">
             <h3>UI/UX Design</h3>
             <ul>
               <li>User Flows & Informationsarchitektur</li>
@@ -592,7 +673,8 @@
               <li>Prototyping (Figma) & Testing</li>
             </ul>
           </div>
-          <div class="panel competency">
+
+          <div class="jelly competency">
             <h3>3D Art & Worldbuilding</h3>
             <ul>
               <li>Worldbuilding & Scene Composition</li>
@@ -608,7 +690,7 @@
         <div class="section-title">Ausgewählte Projekte</div>
 
         <div class="works">
-          <a class="panel card" href="./projekte/sternburg-ui/" data-label="Sternburg UI">
+          <a class="jelly card" href="./projekte/sternburg-ui/" data-label="Sternburg UI">
             <div class="media"></div>
             <div class="body">
               <div class="row">
@@ -624,7 +706,7 @@
             </div>
           </a>
 
-          <a class="panel card" href="./projekte/das-stille-ritual/" data-label="Das stille Ritual">
+          <a class="jelly card" href="./projekte/das-stille-ritual/" data-label="Das stille Ritual">
             <div class="media"></div>
             <div class="body">
               <div class="row">
@@ -640,7 +722,7 @@
             </div>
           </a>
 
-          <a class="panel card" href="./projekte/unreal-magische-welt/" data-label="Unreal World">
+          <a class="jelly card" href="./projekte/unreal-magische-welt/" data-label="Unreal World">
             <div class="media"></div>
             <div class="body">
               <div class="row">
@@ -660,7 +742,7 @@
 
       <section class="section" id="kontakt" aria-label="Kontakt">
         <div class="section-title">Kontakt</div>
-        <div class="panel" style="padding:18px 18px 16px;">
+        <div class="jelly" style="padding:18px 18px 16px;">
           <p style="margin:0;color:rgba(11,19,32,.72);line-height:1.6;">
             Schreib mir gern für Projekte, Kollaborationen oder Praktika.<br>
             <strong>E-Mail:</strong> <span style="opacity:.7;">dein.name@mail.de</span> ·
