--- a/index.html
+++ b/index.html
@@ -1,54 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <style>
-        body {
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.5));
-            backdrop-filter: blur(10px);
-            color: #fff;
-            font-family: 'Arial', sans-serif;
-        }
-        .container {
-            padding: 20px;
-        }
-        .card {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            padding: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(15px);
-            margin: 10px 0;
-        }
-        h1, h2, h3 {
-            margin-top: 0;
-        }
-        a {
-            color: #0ff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Welcome to My Portfolio</h1>
-        <div class="card">
-            <h2>About Me</h2>
-            <p>Here is some information about me...</p>
-        </div>
-        <div class="card">
-            <h2>Projects</h2>
-            <p>Details about my projects...</p>
-        </div>
-        <div class="card">
-            <h2>Contact</h2>
-            <p>How to contact me...</p>
-        </div>
-    </div>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta http-equiv="X-UA-Compatible" content="IE=edge">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <link rel="stylesheet" href="styles.css">\n    <title>Portfolio</title>\n    <style>\n        body {\n            background: rgba(255, 255, 255, 0.1);\n            backdrop-filter: blur(10px);\n            color: white;\n        }\n        nav {\n            background: rgba(255, 255, 255, 0.2);\n            border-radius: 15px;\n            padding: 10px;\n            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);\n            backdrop-filter: blur(5px);\n        }\n        button {\n            background: rgba(255, 255, 255, 0.3);\n            border: none;\n            border-radius: 10px;\n            padding: 10px 20px;\n            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), inset 0 2px 5px rgba(255, 255, 255, 0.5);\n            transition: 0.3s;\n        }\n        button:hover {\n            background: rgba(255, 255, 255, 0.4);\n            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4), inset 0 2px 5px rgba(255, 255, 255, 0.6);\n        }\n        .card {\n            background: rgba(255, 255, 255, 0.3);\n            border-radius: 15px;\n            padding: 15px;\n            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);\n            backdrop-filter: blur(8px);\n            margin: 10px;\n        }\n        .competency-section, .contact-area {\n            margin-top: 20px;\n            padding: 15px;\n            border-radius: 15px;\n            background: rgba(255, 255, 255, 0.2);\n            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);\n            backdrop-filter: blur(15px);\n        }\n        h1, h2, h3 {\n            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);\n        }\n    </style>\n</head>\n<body>\n    <nav>\n        <a href="#">Home</a> |\n        <a href="#">About</a> |\n        <a href="#">Portfolio</a> |\n        <a href="#">Contact</a>\n    </nav>\n    <div class="competency-section">\n        <h2>Competencies</h2>\n        <div class="card">HTML & CSS</div>\n        <div class="card">JavaScript</div>\n        <div class="card">React</div>\n    </div>\n    <div class="contact-area">\n        <h2>Contact Me</h2>\n        <button>Get in Touch</button>\n    </div>\n</body>\n</html>
